CodeErrorReport/parser.output
Terminals unused in grammar

   FIRSTOP
   ERROR
   CHSIGN
   SIZEOF
   LASTOP
   LASTTERM


State 0 conflicts: 1 shift/reduce
State 5 conflicts: 2 shift/reduce
State 23 conflicts: 1 shift/reduce
State 71 conflicts: 2 reduce/reduce
State 163 conflicts: 2 shift/reduce
State 193 conflicts: 1 shift/reduce
State 199 conflicts: 1 shift/reduce
State 206 conflicts: 1 shift/reduce
State 211 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: precomList declList

    2 precomList: precomList PRECOMPILER
    3           | PRECOMPILER
    4           | %empty

    5 declList: declList decl
    6         | decl

    7 decl: varDecl
    8     | funDecl
    9     | error

   10 varDecl: typeSpec varDeclList ';'
   11        | error varDeclList ';'
   12        | typeSpec error ';'

   13 scopedVarDecl: STATIC typeSpec varDeclList ';'
   14              | typeSpec varDeclList ';'
   15              | STATIC typeSpec ';'
   16              | typeSpec error ';'

   17 varDeclList: varDeclList ',' varDeclInit
   18            | varDeclList ',' error
   19            | varDeclInit
   20            | error

   21 varDeclInit: varDeclId
   22            | varDeclId ':' simpleExp
   23            | error ':' simpleExp
   24            | varDeclId ':' error

   25 varDeclId: ID
   26          | ID '[' NUMCONST ']'
   27          | ID '[' error
   28          | error ']'

   29 typeSpec: INT
   30         | BOOL
   31         | CHAR

   32 funDecl: typeSpec ID '(' parms ')' stmt
   33        | ID '(' parms ')' stmt
   34        | typeSpec error
   35        | typeSpec ID '(' error
   36        | typeSpec ID '(' parms ')' error
   37        | ID '(' error
   38        | ID '(' parms ')' error

   39 parms: parmList
   40      | %empty

   41 parmList: parmList ';' parmTypeList
   42         | parmTypeList
   43         | parmList ';' error
   44         | error

   45 parmTypeList: typeSpec parmIdList
   46             | typeSpec error

   47 parmIdList: parmIdList ',' parmId
   48           | parmId
   49           | error

   50 parmId: ID
   51       | ID '[' ']'
   52       | error ']'

   53 stmt: matched
   54     | unmatched

   55 matched: IF simpleExp THEN matched ELSE matched
   56        | IF error THEN matched ELSE unmatched
   57        | IF error THEN matched ELSE matched
   58        | IF error
   59        | IF error ELSE matched
   60        | WHILE simpleExp DO matched
   61        | FOR ID '=' iterRange DO matched
   62        | expStmt
   63        | compoundStmt
   64        | returnStmt
   65        | breakStmt

   66 iterRange: simpleExp TO simpleExp
   67          | simpleExp TO simpleExp BY simpleExp
   68          | simpleExp TO simpleExp BY error
   69          | simpleExp TO error
   70          | error BY error

   71 unmatched: IF simpleExp THEN stmt
   72          | IF error THEN stmt
   73          | IF simpleExp THEN matched ELSE unmatched
   74          | WHILE simpleExp DO unmatched
   75          | FOR ID '=' iterRange DO unmatched

   76 expStmt: exp ';'
   77        | error ';'
   78        | ';'

   79 compoundStmt: '{' localDecls stmtList '}'

   80 localDecls: localDecls scopedVarDecl
   81           | %empty

   82 stmtList: stmtList stmt
   83         | %empty

   84 returnStmt: RETURN ';'
   85           | RETURN exp ';'

   86 breakStmt: BREAK ';'

   87 exp: mutable assignop exp
   88    | mutable INC
   89    | mutable DEC
   90    | simpleExp
   91    | error assignop exp
   92    | mutable assignop error
   93    | error INC
   94    | error DEC

   95 assignop: '='
   96         | ADDASS
   97         | SUBASS
   98         | MULASS
   99         | DIVASS

  100 simpleExp: simpleExp OR andExp
  101          | andExp
  102          | simpleExp OR error

  103 andExp: andExp AND unaryRelExp
  104       | unaryRelExp
  105       | andExp AND error

  106 unaryRelExp: NOT unaryRelExp
  107            | relExp
  108            | NOT error

  109 relExp: minmaxExp relop minmaxExp
  110       | minmaxExp

  111 relop: LEQ
  112      | '<'
  113      | '>'
  114      | GEQ
  115      | EQ
  116      | NEQ

  117 minmaxExp: minmaxExp minmaxop sumExp
  118          | sumExp

  119 minmaxop: MAX
  120         | MIN

  121 sumExp: sumExp sumop mulExp
  122       | mulExp
  123       | sumExp sumop error

  124 sumop: '+'
  125      | '-'

  126 mulExp: mulExp mulop unaryExp
  127       | unaryExp
  128       | mulExp mulop error

  129 mulop: '*'
  130      | '/'
  131      | '%'

  132 unaryExp: unaryop unaryExp
  133         | factor
  134         | unaryop error

  135 unaryop: '-'
  136        | '*'
  137        | '?'

  138 factor: immutable
  139       | mutable

  140 mutable: ID
  141        | ID '[' exp ']'

  142 immutable: '(' exp ')'
  143          | call
  144          | constant
  145          | '(' error
  146          | error '('

  147 call: ID '(' args ')'

  148 args: argList
  149     | %empty

  150 argList: argList ',' exp
  151        | exp

  152 constant: NUMCONST
  153         | CHARCONST
  154         | STRINGCONST
  155         | BOOLCONST


Terminals, with rules where they appear

$end (0) 0
'%' (37) 131
'(' (40) 32 33 35 36 37 38 142 145 146 147
')' (41) 32 33 36 38 142 147
'*' (42) 129 136
'+' (43) 124
',' (44) 17 18 47 150
'-' (45) 125 135
'/' (47) 130
':' (58) 22 23 24
';' (59) 10 11 12 13 14 15 16 41 43 76 77 78 84 85 86
'<' (60) 112
'=' (61) 61 75 95
'>' (62) 113
'?' (63) 137
'[' (91) 26 27 51 141
']' (93) 26 28 51 52 141
'{' (123) 79
'}' (125) 79
error (256) 9 11 12 16 18 20 23 24 27 28 34 35 36 37 38 43 44 46 49
    52 56 57 58 59 68 69 70 72 77 91 92 93 94 102 105 108 123 128 134
    145 146
FIRSTOP (258)
IF (259) 55 56 57 58 59 71 72 73
THEN (260) 55 56 57 71 72 73
ELSE (261) 55 56 57 59 73
FOR (262) 61 75
TO (263) 66 67 68 69
BY (264) 67 68 70
WHILE (265) 60 74
DO (266) 60 61 74 75
BREAK (267) 86
ADDASS (268) 96
SUBASS (269) 97
MULASS (270) 98
DIVASS (271) 99
MIN (272) 120
MAX (273) 119
ID (274) 25 26 27 32 33 35 36 37 38 50 51 61 75 140 141 147
CHARCONST (275) 153
NUMCONST (276) 26 152
BOOLCONST (277) 155
STRINGCONST (278) 154
CHAR (279) 31
INT (280) 29
BOOL (281) 30
STATIC (282) 13 15
NEQ (283) 116
EQ (284) 115
LEQ (285) 111
GEQ (286) 114
AND (287) 103 105
OR (288) 100 102
NOT (289) 106 108
INC (290) 88 93
DEC (291) 89 94
PRECOMPILER (292) 2 3
ERROR (293)
RETURN (294) 84 85
CHSIGN (295)
SIZEOF (296)
LASTOP (297)
LASTTERM (298)


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
program (63)
    on left: 1, on right: 0
precomList (64)
    on left: 2 3 4, on right: 1 2
declList (65)
    on left: 5 6, on right: 1 5
decl (66)
    on left: 7 8 9, on right: 5 6
varDecl (67)
    on left: 10 11 12, on right: 7
scopedVarDecl (68)
    on left: 13 14 15 16, on right: 80
varDeclList (69)
    on left: 17 18 19 20, on right: 10 11 13 14 17 18
varDeclInit (70)
    on left: 21 22 23 24, on right: 17 19
varDeclId (71)
    on left: 25 26 27 28, on right: 21 22 24
typeSpec (72)
    on left: 29 30 31, on right: 10 12 13 14 15 16 32 34 35 36 45 46
funDecl (73)
    on left: 32 33 34 35 36 37 38, on right: 8
parms (74)
    on left: 39 40, on right: 32 33 36 38
parmList (75)
    on left: 41 42 43 44, on right: 39 41 43
parmTypeList (76)
    on left: 45 46, on right: 41 42
parmIdList (77)
    on left: 47 48 49, on right: 45 47
parmId (78)
    on left: 50 51 52, on right: 47 48
stmt (79)
    on left: 53 54, on right: 32 33 71 72 82
matched (80)
    on left: 55 56 57 58 59 60 61 62 63 64 65, on right: 53 55 56 57
    59 60 61 73
iterRange (81)
    on left: 66 67 68 69 70, on right: 61 75
unmatched (82)
    on left: 71 72 73 74 75, on right: 54 56 73 74 75
expStmt (83)
    on left: 76 77 78, on right: 62
compoundStmt (84)
    on left: 79, on right: 63
localDecls (85)
    on left: 80 81, on right: 79 80
stmtList (86)
    on left: 82 83, on right: 79 82
returnStmt (87)
    on left: 84 85, on right: 64
breakStmt (88)
    on left: 86, on right: 65
exp (89)
    on left: 87 88 89 90 91 92 93 94, on right: 76 85 87 91 141 142
    150 151
assignop (90)
    on left: 95 96 97 98 99, on right: 87 91 92
simpleExp (91)
    on left: 100 101 102, on right: 22 23 55 60 66 67 68 69 71 73 74
    90 100 102
andExp (92)
    on left: 103 104 105, on right: 100 101 103 105
unaryRelExp (93)
    on left: 106 107 108, on right: 103 104 106
relExp (94)
    on left: 109 110, on right: 107
relop (95)
    on left: 111 112 113 114 115 116, on right: 109
minmaxExp (96)
    on left: 117 118, on right: 109 110 117
minmaxop (97)
    on left: 119 120, on right: 117
sumExp (98)
    on left: 121 122 123, on right: 117 118 121 123
sumop (99)
    on left: 124 125, on right: 121 123
mulExp (100)
    on left: 126 127 128, on right: 121 122 126 128
mulop (101)
    on left: 129 130 131, on right: 126 128
unaryExp (102)
    on left: 132 133 134, on right: 126 127 132
unaryop (103)
    on left: 135 136 137, on right: 132 134
factor (104)
    on left: 138 139, on right: 133
mutable (105)
    on left: 140 141, on right: 87 88 89 92 139
immutable (106)
    on left: 142 143 144 145 146, on right: 138
call (107)
    on left: 147, on right: 143
args (108)
    on left: 148 149, on right: 147
argList (109)
    on left: 150 151, on right: 148 150
constant (110)
    on left: 152 153 154 155, on right: 144


State 0

    0 $accept: . program $end

    PRECOMPILER  shift, and go to state 1

    PRECOMPILER  [reduce using rule 4 (precomList)]
    $default     reduce using rule 4 (precomList)

    program     go to state 2
    precomList  go to state 3


State 1

    3 precomList: PRECOMPILER .

    $default  reduce using rule 3 (precomList)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: precomList . declList
    2 precomList: precomList . PRECOMPILER

    error        shift, and go to state 5
    ID           shift, and go to state 6
    CHAR         shift, and go to state 7
    INT          shift, and go to state 8
    BOOL         shift, and go to state 9
    PRECOMPILER  shift, and go to state 10

    declList  go to state 11
    decl      go to state 12
    varDecl   go to state 13
    typeSpec  go to state 14
    funDecl   go to state 15


State 4

    0 $accept: program $end .

    $default  accept


State 5

    9 decl: error .
   11 varDecl: error . varDeclList ';'

    error  shift, and go to state 16
    ID     shift, and go to state 17

    $end   reduce using rule 9 (decl)
    error  [reduce using rule 9 (decl)]
    ID     [reduce using rule 9 (decl)]
    CHAR   reduce using rule 9 (decl)
    INT    reduce using rule 9 (decl)
    BOOL   reduce using rule 9 (decl)

    varDeclList  go to state 18
    varDeclInit  go to state 19
    varDeclId    go to state 20


State 6

   33 funDecl: ID . '(' parms ')' stmt
   37        | ID . '(' error
   38        | ID . '(' parms ')' error

    '('  shift, and go to state 21


State 7

   31 typeSpec: CHAR .

    $default  reduce using rule 31 (typeSpec)


State 8

   29 typeSpec: INT .

    $default  reduce using rule 29 (typeSpec)


State 9

   30 typeSpec: BOOL .

    $default  reduce using rule 30 (typeSpec)


State 10

    2 precomList: precomList PRECOMPILER .

    $default  reduce using rule 2 (precomList)


State 11

    1 program: precomList declList .
    5 declList: declList . decl

    error  shift, and go to state 5
    ID     shift, and go to state 6
    CHAR   shift, and go to state 7
    INT    shift, and go to state 8
    BOOL   shift, and go to state 9

    $end  reduce using rule 1 (program)

    decl      go to state 22
    varDecl   go to state 13
    typeSpec  go to state 14
    funDecl   go to state 15


State 12

    6 declList: decl .

    $default  reduce using rule 6 (declList)


State 13

    7 decl: varDecl .

    $default  reduce using rule 7 (decl)


State 14

   10 varDecl: typeSpec . varDeclList ';'
   12        | typeSpec . error ';'
   32 funDecl: typeSpec . ID '(' parms ')' stmt
   34        | typeSpec . error
   35        | typeSpec . ID '(' error
   36        | typeSpec . ID '(' parms ')' error

    error  shift, and go to state 23
    ID     shift, and go to state 24

    varDeclList  go to state 25
    varDeclInit  go to state 19
    varDeclId    go to state 20


State 15

    8 decl: funDecl .

    $default  reduce using rule 8 (decl)


State 16

   20 varDeclList: error .
   23 varDeclInit: error . ':' simpleExp
   28 varDeclId: error . ']'

    ':'  shift, and go to state 26
    ']'  shift, and go to state 27

    $default  reduce using rule 20 (varDeclList)


State 17

   25 varDeclId: ID .
   26          | ID . '[' NUMCONST ']'
   27          | ID . '[' error

    '['  shift, and go to state 28

    $default  reduce using rule 25 (varDeclId)


State 18

   11 varDecl: error varDeclList . ';'
   17 varDeclList: varDeclList . ',' varDeclInit
   18            | varDeclList . ',' error

    ';'  shift, and go to state 29
    ','  shift, and go to state 30


State 19

   19 varDeclList: varDeclInit .

    $default  reduce using rule 19 (varDeclList)


State 20

   21 varDeclInit: varDeclId .
   22            | varDeclId . ':' simpleExp
   24            | varDeclId . ':' error

    ':'  shift, and go to state 31

    $default  reduce using rule 21 (varDeclInit)


State 21

   33 funDecl: ID '(' . parms ')' stmt
   37        | ID '(' . error
   38        | ID '(' . parms ')' error

    error  shift, and go to state 32
    CHAR   shift, and go to state 7
    INT    shift, and go to state 8
    BOOL   shift, and go to state 9

    ')'  reduce using rule 40 (parms)

    typeSpec      go to state 33
    parms         go to state 34
    parmList      go to state 35
    parmTypeList  go to state 36


State 22

    5 declList: declList decl .

    $default  reduce using rule 5 (declList)


State 23

   12 varDecl: typeSpec error . ';'
   20 varDeclList: error .
   23 varDeclInit: error . ':' simpleExp
   28 varDeclId: error . ']'
   34 funDecl: typeSpec error .

    ';'  shift, and go to state 37
    ':'  shift, and go to state 26
    ']'  shift, and go to state 27

    ';'       [reduce using rule 20 (varDeclList)]
    ','       reduce using rule 20 (varDeclList)
    $default  reduce using rule 34 (funDecl)


State 24

   25 varDeclId: ID .
   26          | ID . '[' NUMCONST ']'
   27          | ID . '[' error
   32 funDecl: typeSpec ID . '(' parms ')' stmt
   35        | typeSpec ID . '(' error
   36        | typeSpec ID . '(' parms ')' error

    '('  shift, and go to state 38
    '['  shift, and go to state 28

    $default  reduce using rule 25 (varDeclId)


State 25

   10 varDecl: typeSpec varDeclList . ';'
   17 varDeclList: varDeclList . ',' varDeclInit
   18            | varDeclList . ',' error

    ';'  shift, and go to state 39
    ','  shift, and go to state 30


State 26

   23 varDeclInit: error ':' . simpleExp

    error        shift, and go to state 40
    ID           shift, and go to state 41
    CHARCONST    shift, and go to state 42
    NUMCONST     shift, and go to state 43
    BOOLCONST    shift, and go to state 44
    STRINGCONST  shift, and go to state 45
    '('          shift, and go to state 46
    '-'          shift, and go to state 47
    '?'          shift, and go to state 48
    '*'          shift, and go to state 49
    NOT          shift, and go to state 50

    simpleExp    go to state 51
    andExp       go to state 52
    unaryRelExp  go to state 53
    relExp       go to state 54
    minmaxExp    go to state 55
    sumExp       go to state 56
    mulExp       go to state 57
    unaryExp     go to state 58
    unaryop      go to state 59
    factor       go to state 60
    mutable      go to state 61
    immutable    go to state 62
    call         go to state 63
    constant     go to state 64


State 27

   28 varDeclId: error ']' .

    $default  reduce using rule 28 (varDeclId)


State 28

   26 varDeclId: ID '[' . NUMCONST ']'
   27          | ID '[' . error

    error     shift, and go to state 65
    NUMCONST  shift, and go to state 66


State 29

   11 varDecl: error varDeclList ';' .

    $default  reduce using rule 11 (varDecl)


State 30

   17 varDeclList: varDeclList ',' . varDeclInit
   18            | varDeclList ',' . error

    error  shift, and go to state 67
    ID     shift, and go to state 17

    varDeclInit  go to state 68
    varDeclId    go to state 20


State 31

   22 varDeclInit: varDeclId ':' . simpleExp
   24            | varDeclId ':' . error

    error        shift, and go to state 69
    ID           shift, and go to state 41
    CHARCONST    shift, and go to state 42
    NUMCONST     shift, and go to state 43
    BOOLCONST    shift, and go to state 44
    STRINGCONST  shift, and go to state 45
    '('          shift, and go to state 46
    '-'          shift, and go to state 47
    '?'          shift, and go to state 48
    '*'          shift, and go to state 49
    NOT          shift, and go to state 50

    simpleExp    go to state 70
    andExp       go to state 52
    unaryRelExp  go to state 53
    relExp       go to state 54
    minmaxExp    go to state 55
    sumExp       go to state 56
    mulExp       go to state 57
    unaryExp     go to state 58
    unaryop      go to state 59
    factor       go to state 60
    mutable      go to state 61
    immutable    go to state 62
    call         go to state 63
    constant     go to state 64


State 32

   37 funDecl: ID '(' error .
   44 parmList: error .

    ';'       reduce using rule 44 (parmList)
    ')'       reduce using rule 44 (parmList)
    $default  reduce using rule 37 (funDecl)


State 33

   45 parmTypeList: typeSpec . parmIdList
   46             | typeSpec . error

    error  shift, and go to state 71
    ID     shift, and go to state 72

    parmIdList  go to state 73
    parmId      go to state 74


State 34

   33 funDecl: ID '(' parms . ')' stmt
   38        | ID '(' parms . ')' error

    ')'  shift, and go to state 75


State 35

   39 parms: parmList .
   41 parmList: parmList . ';' parmTypeList
   43         | parmList . ';' error

    ';'  shift, and go to state 76

    $default  reduce using rule 39 (parms)


State 36

   42 parmList: parmTypeList .

    $default  reduce using rule 42 (parmList)


State 37

   12 varDecl: typeSpec error ';' .

    $default  reduce using rule 12 (varDecl)


State 38

   32 funDecl: typeSpec ID '(' . parms ')' stmt
   35        | typeSpec ID '(' . error
   36        | typeSpec ID '(' . parms ')' error
